# MoatX

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.understand-anything/: knowledge-graph.json  meta.json
data/: event_history.toml  event_sector_map.toml  event_sources.toml  event_transmission_map.toml  feishu.toml.example  llm_intelligence.toml.example  moatx.toml  schedule_config.toml  sector_graph.toml  stock_topic_exposure.toml
docs/: BETA_PLAN.md  CRAWLER_USAGE.md  EVENT_INTELLIGENCE_ALGORITHM.md  EVENT_INTELLIGENCE_IMPL_PLAN.md  NEWS_INTELLIGENCE_V2_PLAN.md  PROJECT_ARCHITECTURE.md  PROJECT_STATUS.md  README.md  SCORING_ALGORITHM.md  known_errors.md
docs/archive/: README.md
docs/eastmoney-api/: README.md  openapi.yaml
examples/: backtest_600734.py  debug_600734.py  debug_order.py  debug_signal.py  debug_strategy.py  test_benchmark.py
modules/: __init__.py  __main__.py  akshare_cache.py  akshare_compat.py  alert_manager.py  alerter.py  analyzer.py  announcement_risk.py  cache_layer.py  calendar.py  candidate.py  charts.py  cli_portfolio.py  config.py  data_source.py  data_source_manager.py  datasource.py  event_driver.py  fallback_policy.py  indicators.py  logger.py  market_filters.py  market_index.py  news_manager.py  news_source.py  observability.py  portfolio.py  quick_decision.py  rank_engine.py  result.py  risk_checker.py  risk_controller.py  scheduler.py  scoring_engine.py  screener.py  sector_tags.py  sell_signal.py  simulation.py  sina_http.py  source_health.py  (+5 more)
modules/backtest/: __init__.py  calendar.py  datafeed.py  engine.py  fees.py  metrics.py  order.py  strategy.py
modules/cli/: __init__.py  __main__.py  alerter.py  market.py  portfolio.py  quote.py  risk.py
scripts/: competition_monitor.py  competition_watchdog.ps1  daily_report.py  diagnose_crawler.py  import_candidates.py  kill_orphans.ps1  migrate_feishu_to_toml.py  probe_api.py  set_pending.py  verify_candidates.bat  verify_candidates.py
tests/: __init__.py  conftest.py  test_announcement_risk.py  test_backtest_constraints.py  test_config.py  test_datasource_consensus.py  test_event_context.py  test_event_driver.py  test_event_elasticity.py  test_event_intelligence.py  test_event_notifier.py  test_event_scheduler.py  test_event_sources_config.py  test_event_status_labels.py  test_event_summary.py  test_indicators.py  test_integration.py  test_llm_semantics.py  test_market_filters.py  test_market_index.py  test_new_strategies.py  test_news_factors.py  test_news_intelligence.py  test_optional_akshare.py  test_portfolio.py  test_quick_decision.py  test_risk_checker.py  test_scoring_engine.py  test_sector_tags.py  test_stock_decision_report.py  test_stock_topic_exposure.py  test_swing_low_absorb.py  test_topic_memory.py  test_utils.py
(+96 files in other folders)
